--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                         <a href="#" >Trang chủ</a>
                     </li>
                     <li>
-                        <a href="/html/tocpics.html">Đề tài</a>
+                        <a href="tocpics.html">Đề tài</a>
                     </li>
                     <li>
-                        <a href="/html/lecturers.html">Giảng Viên</a>
+                        <a href="lecturers.html">Giảng Viên</a>
                     </li>
                     <li>
-                        <a href="/html/news.html">Tin Tức</a>
+                        <a href="news.html">Tin Tức</a>
                     </li>
                     <li class="contact">
                         <a href="#">Liên hệ</a>
                     </li>
                     <li class="user" > 
-                        <a href="/html/login.html"><i class="fa-solid fa-user"></a></i>
+                        <a href="login.html"><i class="fa-solid fa-user"></a></i>
                     </li>
                 </ul>
             </div>
