--- a/tocpics.html
+++ b/tocpics.html
@@ -40,22 +40,22 @@
             <div class="menu-items wow animate__slideInRight animate__slow">
                 <ul class="menu-item flex text-decoration">
                     <li>
-                        <a href="/html/home.html">Trang chủ</a>
+                        <a href="home.html">Trang chủ</a>
                     </li>
                     <li>
                         <a href="#">Đề tài</a>
                     </li>
                     <li>
-                        <a href="/html/lecturers.html">Giảng Viên</a>
+                        <a href="lecturers.html">Giảng Viên</a>
                     </li>
                     <li>
-                        <a href="/html/news.html">Tin Tức</a>
+                        <a href="news.html">Tin Tức</a>
                     </li>
                     <li class="contact">
                         <a href="#">Liên hệ</a>
                     </li>
                     <li class="user" > 
-                        <a href="/html/login.html"><i class="fa-solid fa-user"></a></i>
+                        <a href="login.html"><i class="fa-solid fa-user"></a></i>
                     </li>
                 </ul>
             </div>
