--- a/tocpics.html
+++ b/tocpics.html
@@ -37,10 +37,13 @@
     <nav>
         <div class=" menu flex header">
             <div class="image-header wow animate__slideInLeft animate__slow"> <img src="/image/logo.png" alt="OU"></div>
-            <div class="menu-items wow animate__slideInRight animate__slow">
+            <div class="btn-menu">
+                <button id="show-menu"><i class="fa-solid fa-list"></i></button>
+            </div>
+            <div class="menu-items wow animate__slideInRight animate__slow" id="menu-items">
                 <ul class="menu-item flex text-decoration">
                     <li>
-                        <a href="home.html">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
                         <a href="#">Đề tài</a>
@@ -56,6 +59,9 @@
                     </li>
                     <li class="user" > 
                         <a href="login.html"><i class="fa-solid fa-user"></a></i>
+                    </li>
+                    <li class="esc" id="esc">
+                        <a href="#">Thoát menu</a>
                     </li>
                 </ul>
             </div>
