--- a/news.html
+++ b/news.html
@@ -49,6 +49,9 @@
                         <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
+                        <a href="introduce.html">Giới Thiệu</a>
+                    </li>
+                    <li>
                         <a href="tocpics.html">Đề tài</a>
                     </li>
                     <li>
