--- a/tocpics.html
+++ b/tocpics.html
@@ -46,6 +46,9 @@
                         <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
+                        <a href="introduce.html">Giới Thiệu</a>
+                    </li>
+                    <li>
                         <a href="#">Đề tài</a>
                     </li>
                     <li>
