--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="menu-items wow animate__slideInRight animate__slow"  id="menu-items">
                 <ul class="menu-item flex text-decoration">
-                    <li>
+                    <li class="action">
                         <a href="#" >Trang chủ</a>
                     </li>
                     <li>
@@ -139,6 +139,7 @@
         </div>
     </section>
 
+    
     <section class="lecturer-favorite">
         <div class="title wow animate__backInDown animate__slow">
             <h1>Giảng viên được yêu thích nhất</h1>
