--- a/news.html
+++ b/news.html
@@ -57,7 +57,7 @@
                     <li>
                         <a href="lecturers.html">Giảng Viên</a>
                     </li>
-                    <li>
+                    <li class="action">
                         <a href="#">Tin Tức</a>
                     </li>
                     <li class="contact">
@@ -104,21 +104,21 @@
     <main class="flex">
         <div class="notifi text-decoration">
             <div class="notifi-item wow animate__zoomInLeft animate__slow">
-                <a href="/html/login.html">
+                <a href="login.html">
                     <h1>Thông Báo</h1>
                 </a>
                 <div class="info-notifi">
-                    <a href="/html/login.html">
+                    <a href="login.html">
                         <p><i class="fa-solid fa-check"></i> Bạn đã đăng kí đề tài nghiên cứu khoa học cho năm 2023
                             chưa?</p>
                     </a>
-                    <a href="/html/login.html">
+                    <a href="login.html">
                         <p><i class="fa-solid fa-check"></i> Bạn đã kiểm tra trạng thái đề tài bạn đã đăng kí chưa?</p>
                     </a>
-                    <a href="/html/login.html">
+                    <a href="login.html">
                         <p><i class="fa-solid fa-check"></i> Bạn đã Xem thành tích đề tài bạn đã hoàn thành chưa?</p>
                     </a>
-                    <a href="/html/login.html">
+                    <a href="login.html">
                         <p><i class="fa-solid fa-check"></i> Bạn đã kiểm tra đề tài bạn đã đăng kí thành hay công chưa?
                         </p>
                     </a>
@@ -129,7 +129,7 @@
         <div class="news" id="container">
             <!-- Kết quả -->
             <div class="news-item wow animate__zoomInRight animate__slow">
-                <div class="header-new text-decoration">
+                <div class="header-new active text-decoration">
                     <a href="javascript:void(0)"><h1><span>Kết quả cuộc thi NCKH Năm 2023-2024</span></h1></a>
                 </div>
                 <div class="content-new">
