--- a/introduce.html
+++ b/introduce.html
@@ -34,6 +34,7 @@
     </script>
     <script src="/js/gototop.js"></script>
     <script src="/js/contact.js"></script>
+    <script src="/js/introduce.js"></script>
 </head>
 
 <body>
@@ -48,7 +49,7 @@
                     <li>
                         <a href="index.html">Trang chủ</a>
                     </li>
-                    <li>
+                    <li class="action">
                         <a href="#">Giới Thiệu</a>
                     </li>
                     <li>
