--- a/lecturers.html
+++ b/lecturers.html
@@ -51,7 +51,7 @@
                     <li>
                         <a href="tocpics.html">Đề tài</a>
                     </li>
-                    <li>
+                    <li class="action">
                         <a href="#">Giảng Viên</a>
                     </li>
                     <li>
