--- a/tocpics.html
+++ b/tocpics.html
@@ -48,7 +48,7 @@
                     <li>
                         <a href="introduce.html">Giới Thiệu</a>
                     </li>
-                    <li>
+                    <li class="action">
                         <a href="#">Đề tài</a>
                     </li>
                     <li>
