--- a/introduce.html
+++ b/introduce.html
@@ -35,6 +35,7 @@
     <script src="/js/gototop.js"></script>
     <script src="/js/contact.js"></script>
     <script src="/js/introduce.js"></script>
+    <script src="/js/slider.js"></script>
 </head>
 
 <body>
@@ -74,6 +75,67 @@
             </div>
         </div>
     </nav>
+
+    <header class="image">
+
+        <div class="btn">
+            <a href="javascript:;" class="prev"><i class="fa-solid fa-chevron-left"></i></a>
+            <a href="javascript:;" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+        </div>
+
+        <div class="btn-number">
+            <a href="javascript:;" class="digit">1</a>
+        </div>
+
+        <div class="content-image">
+            <div class="flex img">
+                <div class="text-image">
+                    <h1> " Trong tất cả các môn khoa học, sai lầm đi trước sự thật, và tốt nhất nó nên đi đầu
+                        tiên hơn là đi cuối cùng. "</h1>
+                    <p>Trích danh ngôn của Horace Walpole</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/32.png" alt="OU">
+                </div>
+            </div>
+
+            <div class="img flex">
+                <div class="text-image">
+                    <h1> " Ta không nên dạy trẻ nhỏ khoa học, nhưng hãy để chúng nếm trải nó. "</h1>
+                    <p>Trích danh ngôn của Jean Jacques Rousseau</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/head31.png" alt="OU">
+                </div>
+
+            </div>
+
+            <div class="flex img">
+                <div class="text-image">
+                    <h1>" Khoa học nào cũng đặt trên nền tảng hệ thống nguyên lý cố định và bất biến như những nguyên
+                        lý chi phối và điều hòa vạn vật. Con người không thể đặt ra nguyên lý, con người chỉ có thể phát
+                        hiện ra chúng. " </h1>
+                    <p>Trích danh ngôn của Thomas Paine</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/herder223.png" alt="OU">
+                </div>
+    
+            </div>
+
+            <div class="img flex">
+                <div class="text-image">
+                    <h1>" Khoa học rỗng tuếch và đầy sai lầm nếu không sinh ra từ Thực nghiệm, người mẹ của mọi Tri thức. "</h1>
+                    <p>Trích danh ngôn của Leonardo da Vinci</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/header54.png" alt="OU">
+                </div>
+    
+            </div>
+        </div>
+
+    </header>
 
     <div class="up">
         <a href="#" id="goUp">
@@ -155,39 +217,39 @@
     </section>
 
     <section class="wall wow animate__bounceInLeft animate__slow">
-       <div class="road">
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <i class="fa-solid fa-podcast"></i>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-        <span>&#8213;</span>
-       </div>
+        <div class="road">
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <i class="fa-solid fa-podcast"></i>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+        </div>
     </section>
 
     <section class="info-qlkh">
@@ -220,39 +282,39 @@
 
     <section class="wall wow animate__bounceInLeft animate__slow">
         <div class="road">
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <i class="fa-solid fa-podcast"></i>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
-         <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <i class="fa-solid fa-podcast"></i>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
+            <span>&#8213;</span>
         </div>
-     </section>
+    </section>
 
     <section class="mission">
         <div>
@@ -262,7 +324,8 @@
             <div class="content-mission wow animate__lightSpeedInRight animate__slow">
                 <h3>&#128073; Chức năng:</h3>
                 <p>
-                    - Tham mưu cho Hiệu trưởng về công tác quản lý và phát triển hoạt động khoa học và công nghệ, hợp tác
+                    - Tham mưu cho Hiệu trưởng về công tác quản lý và phát triển hoạt động khoa học và công nghệ, hợp
+                    tác
                     khoa học trong và ngoài nước.
                     Thực hiện và định hướng công tác khoa học và công nghệ, công tác hợp tác trong nước và quốc tế của
                     toàn trường.
@@ -293,7 +356,8 @@
                     - Chịu trách nhiệm chính trong việc điều phối, tổ chức các hội thảo, sinh hoạt khoa học cấp trường.
                     Theo dõi hoạt động khoa học của các đơn vị thuộc trường.
                 </p>
-                <p>- Tổ chức chỉ đạo, quản lý hoạt động nghiên cứu khoa học của sinh viên, học viên cao học và nghiên cứu
+                <p>- Tổ chức chỉ đạo, quản lý hoạt động nghiên cứu khoa học của sinh viên, học viên cao học và nghiên
+                    cứu
                     sinh.
                 </p>
                 <h5> 2. Công tác Hợp tác:</h5>
@@ -326,7 +390,8 @@
                 <h5> 3. Công tác khác:</h5>
 
                 <p>
-                    - Tổ chức lưu trữ, thống kê, quản lý hồ sơ, tổng hợp và báo cáo hoạt động thuộc các lĩnh vực được phân
+                    - Tổ chức lưu trữ, thống kê, quản lý hồ sơ, tổng hợp và báo cáo hoạt động thuộc các lĩnh vực được
+                    phân
                     công theo quy định hiện hành.
                 </p>
                 <p>
