--- a/news.html
+++ b/news.html
@@ -34,6 +34,7 @@
     <script src="/js/gototop.js"></script>
     <script src="/js/contact.js"></script>
     <script src="/js/news.js"></script>
+    <script src="/js/slider.js"></script>
 </head>
 
 <body>
@@ -75,18 +76,64 @@
     </nav>
 
     <header class="image">
-        <div class="flex img">
-            <div class="text-image wow animate__lightSpeedInLeft animate__slow">
-                <h1>" Khoa học nào cũng đặt trên nền tảng hệ thống nguyên lý cố định và bất biến như những nguyên
-                    lý chi phối và điều hòa vạn vật. Con người không thể đặt ra nguyên lý, con người chỉ có thể phát
-                    hiện ra chúng. " </h1>
-                <p>Trích danh ngôn của Thomas Paine</p>
-            </div>
-            <div class="image-item">
-                <img src="/image/herder223.png" alt="OU">
+
+        <div class="btn">
+            <a href="javascript:;" class="prev"><i class="fa-solid fa-chevron-left"></i></a>
+            <a href="javascript:;" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+        </div>
+
+        <div class="btn-number">
+            <a href="javascript:;" class="digit">1</a>
+        </div>
+
+        <div class="content-image">
+            <div class="flex img">
+                <div class="text-image">
+                    <h1> " Trong tất cả các môn khoa học, sai lầm đi trước sự thật, và tốt nhất nó nên đi đầu
+                        tiên hơn là đi cuối cùng. "</h1>
+                    <p>Trích danh ngôn của Horace Walpole</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/32.png" alt="OU">
+                </div>
             </div>
 
+            <div class="img flex">
+                <div class="text-image">
+                    <h1> " Ta không nên dạy trẻ nhỏ khoa học, nhưng hãy để chúng nếm trải nó. "</h1>
+                    <p>Trích danh ngôn của Jean Jacques Rousseau</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/head31.png" alt="OU">
+                </div>
+
+            </div>
+
+            <div class="flex img">
+                <div class="text-image">
+                    <h1>" Khoa học nào cũng đặt trên nền tảng hệ thống nguyên lý cố định và bất biến như những nguyên
+                        lý chi phối và điều hòa vạn vật. Con người không thể đặt ra nguyên lý, con người chỉ có thể phát
+                        hiện ra chúng. " </h1>
+                    <p>Trích danh ngôn của Thomas Paine</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/herder223.png" alt="OU">
+                </div>
+    
+            </div>
+
+            <div class="img flex">
+                <div class="text-image">
+                    <h1>" Khoa học rỗng tuếch và đầy sai lầm nếu không sinh ra từ Thực nghiệm, người mẹ của mọi Tri thức. "</h1>
+                    <p>Trích danh ngôn của Leonardo da Vinci</p>
+                </div>
+                <div class="image-item">
+                    <img src="/image/header54.png" alt="OU">
+                </div>
+    
+            </div>
         </div>
+
     </header>
 
     <div class="up">
