--- a/tocpics.html
+++ b/tocpics.html
@@ -108,15 +108,12 @@
 
             <div class="flex img">
                 <div class="text-image">
-                    <h1>" Khoa học nào cũng đặt trên nền tảng hệ thống nguyên lý cố định và bất biến như những nguyên
-                        lý chi phối và điều hòa vạn vật. Con người không thể đặt ra nguyên lý, con người chỉ có thể phát
-                        hiện ra chúng. " </h1>
-                    <p>Trích danh ngôn của Thomas Paine</p>
+                    <h1>"Toán học thuần túy, theo cách của riêng nó, là thi ca của tư duy logic. </h1>
+                    <p>Trích danh ngôn của Albert Einstein</p>
                 </div>
                 <div class="image-item">
                     <img src="/image/herder223.png" alt="OU">
                 </div>
-    
             </div>
 
             <div class="img flex">
@@ -127,7 +124,6 @@
                 <div class="image-item">
                     <img src="/image/header54.png" alt="OU">
                 </div>
-    
             </div>
         </div>
 
